--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "firebase": "^9.15.0",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.9.0",
+    "react-scripts": "^2.1.3",
     "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "vite": "^4.2.0"
   }
 }
