--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^2.1.3",
+    "react-timeago": "^7.1.0",
     "react-toastify": "^9.1.2"
   },
   "devDependencies": {
