--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "^2.1.3",
     "react-timeago": "^7.1.0",
     "react-toastify": "^9.1.2",
+    "recharts": "^2.5.0",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
