--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
