--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,12 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-input-emoji": "^5.0.2",
+    "react-loader-spinner": "^5.3.4",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^2.1.3",
+    "react-spinners": "^0.13.8",
     "react-timeago": "^7.1.0",
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
